--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-tactile
+theme: jekyll-theme-modernist
 title: Schuyler Enneman - SNHU Capstone ePortfolio
 description: For CS-499-T6571
